@@ -1,3 +1,15 @@
+2001-03-31  Philip Blundell  <philb@gnu.org>
+
+	From 2001-03-26  H.J. Lu  <hjl@gnu.org>
+	* elf32-gen.c (elf32_generic_link_add_symbols): New. Check
+	if there are any relocations for generic ELF.
+	(bfd_elf32_bfd_link_add_symbols): Defined to
+	elf32_generic_link_add_symbols.
+	* elf64-gen.c (elf64_generic_link_add_symbols): New. Check
+	if there are any relocations for generic ELF.
+	(bfd_elf64_bfd_link_add_symbols): Defined to
+	elf64_generic_link_add_symbols.
+
 2001-03-21  Alan Modra  <alan@linuxcare.com.au>
 
 	* elf32-hppa.c (elf32_hppa_set_gp): Check sec->output_section
